--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-pandas
-numpy
-plotly
+streamlit==1.31.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.18.0
+yfinance>=0.2.36
+requests
+pandas_datareader
+torch --index-url https://download.pytorch.org/whl/cpu
